--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "typescript": "^4.7.4"
   },
   "resolutions": {
-    "query-string/**/decode-uri-component": "^0.2.1"
+    "query-string/**/decode-uri-component": "^0.2.1",
+    "**/@ledgerhq/hw-app-eth": "https://github.com/celo-org/ledgerjs-hw-app-eth.git"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx,json,yaml,yml}": "prettier --write"
