--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -14,10 +14,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@celo/contractkit": "^3.2.0",
+    "@celo/contractkit": "^8.1.0",
     "@celo/react-celo": "5.0.5-dev",
-    "@celo/utils": "^3.2.0",
-    "@celo/wallet-walletconnect": "5.0.4",
+    "@celo/utils": "^7.0.0",
+    "@celo/wallet-walletconnect": "5.0.5-dev",
     "@walletconnect/core": "^2.7.3",
     "@walletconnect/sign-client": "^2.7.3",
     "@walletconnect/types": "^2.7.3",
@@ -28,7 +28,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
-    "web3": "1.3.6"
+    "web3": "^1.10.4"
+  },
+  "resolutions": {
+    "**/@ledgerhq/hw-app-eth": "https://github.com/celo-org/ledgerjs-hw-app-eth.git"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
