--- a/packages/react-celo/package.json
+++ b/packages/react-celo/package.json
@@ -28,14 +28,14 @@
   "readme": "../../readme.md",
   "license": "MIT",
   "dependencies": {
-    "@celo/wallet-base": ">=2.3.0",
-    "@celo/wallet-ledger": ">=2.3.0",
-    "@celo/wallet-local": ">=2.3.0",
-    "@celo/wallet-remote": ">=2.3.0",
+    "@celo/wallet-base": "^6.0.0",
+    "@celo/wallet-ledger": "^6.0.0",
+    "@celo/wallet-local": "^6.0.0",
+    "@celo/wallet-remote": "^6.0.0",
     "@celo/wallet-walletconnect": "5.0.5-dev",
     "@coinbase/wallet-sdk": "^3.2.0",
     "@ethersproject/providers": "^5.5.2",
-    "@ledgerhq/hw-transport-webusb": "^5.43.0",
+    "@ledgerhq/hw-transport-webusb": "^6.29.2",
     "@types/react-modal": "^3.13.1",
     "eventemitter3": "^4.0.7",
     "isomorphic-fetch": "^3.0.0",
@@ -43,6 +43,9 @@
     "react-device-detect": "^2.2.3",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.14.4"
+  },
+  "resolutions": {
+    "@celo/wallet-ledger/@ledgerhq/hw-app-eth": "https://github.com/celo-org/ledgerjs-hw-app-eth.git"
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.35",
@@ -54,12 +57,12 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "tailwindcss": "^3.0.15",
-    "web3": "^1.3.6"
+    "web3": "^1.10.4"
   },
   "peerDependencies": {
-    "@celo/contractkit": ">=2.0.0 <4.0.0",
+    "@celo/contractkit": "^8.0.0",
     "react": ">=17.0.2 <=^18",
     "react-dom": ">=17.0.2 <=^18",
-    "web3": "^1.3.6"
+    "web3": "^1.10.4"
   }
 }
